Removed ::after from aquarius (zoom alignment bug)

--- a/webloft/templates/aquarius/projects.css
+++ b/webloft/templates/aquarius/projects.css
@@ -4,10 +4,11 @@
   flex-wrap: wrap;
 }
 
-.cards::after {
+/*.cards::after {
   content: '';
   flex: auto;
 }
+*/
 
 .card {
   flex: 0 1 24%;
